# os-lab-5

./: .gitignore  CMakeLists.txt  build_linux.sh  build_win.cmd  server.cpp  simulator.c  udp_sender.c
